# kernel-regression-vibecoded

./: .coverage  README.md  claude.md  pyproject.toml  tests.md
.chainlink/: issues.db
examples/: formal_validation.py
src/kernel_regression/: __init__.py  bandwidth.py  diagnostics.py  estimators.py  fast_search.py  kernels.py
src/kernel_regression.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: __init__.py  conftest.py  test_adversarial.py  test_bandwidth.py  test_diagnostics.py  test_estimators.py  test_kernels.py  test_stress.py
